force-app/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Enter the Address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>