force-app/main/default/objects/Contact/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Krishnagiri</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Vellore</fullName>
            </value>
            <value>
                <fullName>Dindigal</fullName>
            </value>
            <value>
                <fullName>Kannur</fullName>
            </value>
            <value>
                <fullName>Kasaragod</fullName>
            </value>
            <value>
                <fullName>Kollam</fullName>
            </value>
            <value>
                <fullName>Kottayam</fullName>
            </value>
            <value>
                <fullName>Bagalkot</fullName>
            </value>
            <value>
                <fullName>Ballari</fullName>
            </value>
            <value>
                <fullName>Belagavi</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>East Godavari</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>