force-app/main/default/objects/Contact/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <formula>LEFT( FirstName , 2) &amp; RIGHT( LastName , 2) &amp; &quot;@gmail.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email ID</label>
    <type>Text</type>
</CustomField>