force-app/main/default/objects/Contact/fields/High_Account__c.field-meta.xml
<CustomField>
    <fullName>High_Account__c</fullName>
    <formula>ISPICKVAL( Account.Priority__c , &quot;High&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Account</label>
    <type>Checkbox</type>
</CustomField>