force-app/main/default/objects/Contact/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <formula>IF( ISPICKVAL(  Account.Priority__c  ,&quot;Low&quot;), 
        &quot; Account.Priority__c . Low&quot;,
     IF( ISPICKVAL( Account.Priority__c ,&quot;Medium&quot;),
        &quot; Account.Priority__c . Medium&quot;,
        &quot;Account.Priority__c . High&quot;
   )
)</formula>
    <label>High Priority</label>
    <type>Text</type>
</CustomField>