force-app/main/default/objects/Contact/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>