force-app/main/default/objects/Contact/validationRules/Home_Phone_Number_should_always_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Phone_Number_should_always_be_empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISBLANK(Phone),
  NOT(ISBLANK( HomePhone ))
)</errorConditionFormula>
    <errorDisplayField>HomePhone</errorDisplayField>
    <errorMessage>Phone Number is required and Home Phone Number should always be empty</errorMessage>
</ValidationRule>