force-app/main/default/objects/Contact/validationRules/Phone_is_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_is_not_empty</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Phone)</errorConditionFormula>
    <errorMessage>Please enter the phone number</errorMessage>
</ValidationRule>