force-app/main/default/objects/Contact/validationRules/Ten_Digit_Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Ten_Digit_Mobile_Number</fullName>
    <active>false</active>
    <errorConditionFormula>OR(LEN(   Phone   ) &lt;&gt; 10, NOT(ISNUMBER(  Phone  )))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter the Ten Digit Number</errorMessage>
</ValidationRule>