force-app/main/default/objects/Contact/listViews/deleted_con.listView-meta.xml
<ListView>
    <fullName>deleted_con</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>equals</operation>
        <value>cobin</value>
    </filters>
    <label>deleted con</label>
</ListView>